fix nav hover jump

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body{
     }
     li:hover {
         border-radius: 3px;
-        border: 1px solid orange;
         background-color: blanchedalmond;
         color: coral;
     }
@@ -138,9 +137,6 @@ main{
 article {
     color:rgb(113 86 86 / 86%);
     background-color: #ffffffb5;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
     margin-top: 10px;
     padding: 10px;
 }
@@ -229,11 +225,10 @@ footer{
         background-color: yellow;
         flex-direction: column;
     }
-    .main-section{
-        margin: 20px 10px 20px 10px;
-        width: 90%;
-    }
 */
+.header-section1 ul {
+    display: none;
+}
     .side-article{
        justify-content: center;
        }
